feat: adicao básica do temporizador

--- a/Mouse/passMouseGame/game.html
+++ b/Mouse/passMouseGame/game.html
@@ -6,14 +6,14 @@
 
 <link rel="stylesheet" href="game.css">
 <script src="js/box.js"></script>
-<script src="js/timer.js]"></script>
+<script src="js/timer.js"></script>
 
   <title>Record pass</title>
 </head>
 <body>
   <h1>Diminua a caixa passando o mouse até 1 pixel antes do tempo acabar!</h1>
-  <div id="timer">
-
+  <div id="divtimer">
+    <p class="Inumber">30</p>
   </div>
   <div class="backBox">
     <div class="Box"></div>
