feat: new simple project

--- a/Dark-Mode/index.html
+++ b/Dark-Mode/index.html
@@ -10,10 +10,12 @@
   <title>List D-M</title>
 </head>
 <body>
-  <select name="Mode" id="Mode">
-    <option value="null"></option>
-    <option value="Dark" class="Dark" onclick={}>Dark</option>
-    <option value="Light" class="Light" onclick={}>Light</option>
-  </select>
+  <!-- Como é sobente um dark Mode, nn utilizarei um select -->
+  <div class="containerr">
+    <input type="checkbox" value="button" id="DarkMode">
+    <label for="DarkMode"></label>
+  </div>
+
+  <h1>Simple Dark Mode</h1>
 </body>
 </html>
