refactor: remove comments, update readme and reorganization

--- a/cssProjects/Dark-Mode/index.html
+++ b/cssProjects/Dark-Mode/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="stylesheet" href="style.css">
-  <script src="js/button.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="js/button.js"></script>
 
-  <title>List D-M</title>
-</head>
-<body>
-  <!-- Como é sobente um dark Mode, nn utilizarei um select -->
-  <div class="containerr">
-    <input type="checkbox" value="button" id="DarkMode">
-    <label for="DarkMode"></label>
-  </div>
+    <title>List D-M</title>
+  </head>
+  <body>
+    <div class="containerr">
+      <input type="checkbox" value="button" id="DarkMode" />
+      <label for="DarkMode"></label>
+    </div>
 
-  <h1>Simple Dark Mode</h1>
-</body>
+    <h1>Simple Dark Mode</h1>
+  </body>
 </html>
