refactor: more understandable field

--- a/math/IMC/IMC.html
+++ b/math/IMC/IMC.html
@@ -10,10 +10,9 @@
 <body>
   <main class="CalcBox">
     <input type="number" name="Peso" id="Peso" placeholder="Peso (kg)">
-    <input type="number" name="Altura" id="Altura" placeholder="Altura (m)">
+    <input type="number" name="Altura" id="Altura" placeholder="Altura (x.xx)">
     <input type="button" value="Calcular" onclick="calculoIMC()">
     <div class="resultTXT">
-      
     </div>
   </main>
   <script src="IMC.js"></script>
